Corrections sur le footer (alignement+partenaires)

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -9,6 +9,19 @@ footer {
 
         .nav_footer {
             margin-bottom: 50px;
+
+            @media only screen and (max-width: 500px) {
+                margin-bottom: 0;
+
+                ul a {
+                    text-align: center;
+
+                    img {
+                        width: 60%;
+                    }
+                }
+            }
+
             ul {
                 display: flex;
                 justify-content: center;
@@ -19,6 +32,7 @@ footer {
                 @media only screen and (max-width: 1100px) {
                     a {
                         margin-bottom: 50px;
+                        order: -1;
                     }
 
                     flex-direction: column;
@@ -57,6 +71,10 @@ footer {
             @media only screen and (max-width: 1100px) {
                 flex-direction: column;
                 align-items: center;
+            }
+
+            @media only screen and (max-width: 500px) {
+                margin-bottom: 0;
             }
 
             span {
@@ -118,7 +136,11 @@ footer {
         .medias {
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
+            align-items: center;
+
+            span {
+                text-align: center;
+            }
             .reseaux {
                 img {
                     padding: 0 20px;
@@ -137,6 +159,9 @@ footer {
         }
 
         .infolettre {
+            align-items: center;
+            text-align: center;
+
             .container {
                 padding: 15px 0;
                 input {
@@ -189,6 +214,13 @@ footer {
 
             @media only screen and (max-width: 1680px) {
                 flex-wrap: wrap;
+            }
+
+            @media only screen and (max-width: 500px) {
+                a {
+                    width: 50%;
+                    padding: 10px;
+                }
             }
         }
     }
